Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/APTS_Mat_Grp_1_CIT__c.field-meta.xml
<CustomField>
    <fullName>APTS_Mat_Grp_1_CIT__c</fullName>
    <label>APTS_Mat_Grp_1_CIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>