Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Base_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Price ?</label>
    <type>Checkbox</type>
</CustomField>