Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost__c</fullName>
    <formula>Prod_Cost__c * SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>