Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Extended_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Extended_Gross_Profit__c</fullName>
    <formula>SBQQ__NetTotal__c -   Extended_Cost__c</formula>
    <label>Extended Gross Profit</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>