Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock Order</fullName>
                <default>true</default>
                <label>Stock Order</label>
            </value>
            <value>
                <fullName>Indent Order(Product)</fullName>
            </value>
            <value>
                <fullName>Indent Order(Parts)</fullName>
            </value>
            <value>
                <fullName>KB Order(Direct)</fullName>
            </value>
            <value>
                <fullName>Individual Spec</fullName>
            </value>
            <value>
                <fullName>Project w/ Spec</fullName>
            </value>
            <value>
                <fullName>Project w/o Spec</fullName>
            </value>
            <value>
                <fullName>Project Stock Order</fullName>
            </value>
            <value>
                <fullName>Consigned Stock Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>