Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>