Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NET_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>NET_Price_Formula__c</fullName>
    <formula>IF(
    Pricing_Matrix__r.Location_Based_NET_Price__c != 0,
    Pricing_Matrix__r.Location_Based_NET_Price__c,

    IF(
       Pricing_Matrix__r.Customer_Based_NET_Price__c != 0,
        Pricing_Matrix__r.Customer_Based_NET_Price__c, 
          0
                            )
                        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NET Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>