Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Matrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Matrix</label>
    <referenceTo>Pricing_Matrix__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>