Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Prod_Cost__c.field-meta.xml
<CustomField>
    <fullName>Prod_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>