Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Spec_Package_Code_Desc__c.field-meta.xml
<CustomField>
    <fullName>Spec_Package_Code_Desc__c</fullName>
    <label>Spec Package Code Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>