Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Weight_lb_f__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lb_f__c</fullName>
    <formula>SBQQ__Quantity__c *  Weight_lb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight (lb)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>