Kitz America DF/DFpartialcopy/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <defaultValue>&quot;STAFFORD&quot;</defaultValue>
    <label>WH Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>